tests/functions/valid/variable_as_arg.amu
s32 foo(s32 x) {
    return x + 1;
}

main :: () -> s32 {
    a:s32 = 1;
    return foo(a);
}
