tests/functions/invalid/bad_arg.amu
s32 foo(s32 a){
    return 3 + a;
}

main :: () -> s32 {
    return foo();
}